# backport

./: CMakeLists.txt  README.md
.gitea/workflows/: macos_ci.yml  ubuntu_ci.yml  windows_ci.yml
.github/workflows/: macos_ci.yml  ubuntu_ci.yml  windows_ci.yml
cmake/: get_cpm.cmake
include/backport/: expected.h  expected.hpp  move_only_function.h  move_only_function.hpp
tests/: CMakeLists.txt  cpp11.cpp  cpp20.cpp  get_cpm.cmake  test_edge_cases.cpp  test_expected.cpp  test_move_only_function.cpp  test_soo.cpp
vcpkg-overlay/backport/: portfile.cmake  vcpkg.json
